# babel-harness

./: .gitignore  README.md  Vindexfile  pyproject.toml
.claude/skills/run-babel-harness/: SKILL.md  smoke.sh
.reuse/: dep5
docs/specs/: 2026-06-23-design.md
docs/superpowers/: skill-graph.md
docs/superpowers/plans/: 2026-06-23-babel-harness.md  2026-06-24-coding-agent.md  2026-06-27-ddt-framework-verification-and-merge.md  2026-06-28-github-as-ffn-bridge.md  2026-06-29-repo-patch-builder.md
docs/superpowers/specs/: 2026-06-24-coding-agent-design.md  2026-06-24-larql-comparison.md  2026-06-27-larql-ddt-framework-design.md
graphify-out/: babel-harness.larql.json  babel-harness.nt  edges.tsv  trits.tsv
lib/: harness-common.sh
papers/ai_and_agents/github-as-ffn-bridge/: Makefile  README.md
papers/ai_and_agents/github-as-ffn-bridge/schema/: custom.rnc
papers/ai_and_agents/github-as-ffn-bridge/scratch/: formulas.md  notes.md
papers/ai_and_agents/github-as-ffn-bridge/src/: 00-metadata.xml  01-github-as-ffn.xml  bibliography.bib
papers/ai_and_agents/rdl-skill-evaluation/: .gitignore  Makefile  README.md
scripts/: build_repo_patch.py  ddt_proof.py  demo-github-ffn.sh  extract-graph.py  github_graph.py  github_lql_bridge.py  graph_vindex.py  spec_proof.py
tests/: test-coding-agent.bash  test-larql-graft.bash  test-pi-harness.bash  test_build_repo_patch.py  test_github_lql_bridge.py  test_graph_vindex.py
tests/fixtures/: babel-harness-94485d4.vlp
tests/mocks/: curl  free  goose  larql  ollama  pi  python3-graph  sudo  systemctl
(+10 files in other folders)
