[project]
name = "babel-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "networkx>=3.1",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
